fix(index.css): wrap items

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 #root {
   display: flex;
+  flex-wrap: wrap;
 }
 .worker {
   display: flex;
